--- a/SEMANTIC UI/css/style.css
+++ b/SEMANTIC UI/css/style.css
@@ -76,3 +76,36 @@ h1.ui.header {
     border: 1px solid #4183C4 !important;
     color: #4183C4 !important
 }
+
+
+h2,h3{
+    font-weight: 300 !important;
+    
+}
+.sc-section{
+    padding-top:  100px !important;
+    padding-bottom:  100px !important;
+}
+.sc-icon{
+    background-color: black;
+    color: #fff;
+    padding: 0.6em;
+  border-radius: 50%;
+     
+}
+
+.sc-icons{
+    text-align: center;
+    color:
+}
+
+.sc-text-center{
+    text-align: center;
+}
+.sc-text-center p{
+    font-size: 1.2rem
+}
+h2.sc-h2{
+    font-size: 2.4em !important;
+    text-transform: uppercase !important
+}
